Closed Bug 1876612 Opened 2 years ago Closed 2 years ago

Button baseline doesn't propagate to grid baseline with align-items: baseline

Categories

(Core :: Layout: Grid, defect, P2)

Firefox 122
defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- wontfix
firefox123 --- fixed
firefox124 --- fixed

People

(Reporter: caleb, Assigned: tlouw)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.2.1 Safari/605.1.15

Steps to reproduce:

TLDR: https://jsfiddle.net/haf52ozd/

  1. Have a button inside a grid with align-items: baseline
  2. Try to align that grid to another baseline, e.g. as an inline-grid, or as a flex item in a flex container with align-items: baseline

Actual results:

The baselines do not align

Expected results:

The baselines should align. They align correctly with the default align-items: stretch.

This stopped working around Firefox 122. It worked in Firefox 121 and earlier.

The Bugbug bot thinks this bug should belong to the 'Core::Layout: Grid' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout: Grid
Product: Firefox → Core

:tlouw, since you are the author of the regressor, bug 1609403, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(tlouw)
Attached file bug-1876612.html
Assignee: nobody → tlouw
Severity: -- → S3
Flags: needinfo?(tlouw)
Priority: -- → P2
Attachment #9376938 - Attachment description: WIP: Bug 1876612 - Use the newer function for calculating item baselines r=#layout → Bug 1876612 - Use the newer function for calculating item baselines r=#layout
Pushed by tlouw@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b48848c32dbe Use the newer function for calculating item baselines r=layout-reviewers,emilio
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch

The patch landed in nightly and beta is affected.
:tlouw, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox123 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(tlouw)

er, I missed that this was a regression when setting status flags to wontfix.

It might be worth uplifting this to beta123, given that it's relatively targeted and we're still in the first half of the beta period (Firefox 123 ships on Feb 20th). What do you think, Tiaan?

Comment on attachment 9376938 [details]
Bug 1876612 - Use the newer function for calculating item baselines r=#layout

Beta/Release Uplift Approval Request

  • User impact if declined: This bug causes a visual issue where items inside buttons are not correctly aligned according to how users expect.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This was a small fix and covered by WPT tests and should be very low risk.
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(tlouw)
Attachment #9376938 - Flags: approval-mozilla-beta?

Comment on attachment 9376938 [details]
Bug 1876612 - Use the newer function for calculating item baselines r=#layout

Approved for 123 beta 6, thanks.

Attachment #9376938 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: