Bug 1876612 - Use the newer function for calculating item baselines r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D199870